tests/negative/neg_pr116_tab_indent.safe
package neg_PR116_Tab_Indent

	function broken returns integer
	   return 1
